--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ name	= "asm4ahk_bin"
 path	= "src/asm4ahk.bin.rs"
 
 [dependencies]
+widestring = "1.0.2"
 
 [profile.release]
 # opt        	for      	size
